namespace SoulRunProject.SoulMixScene
{
    /// <summary> Traitを実行するためのインターフェース </summary>
    public interface ITraitInterface
    {
        void ExecuteTrait();
    }
}