@startuml

package SoulMixScene {

class SoulMixPresenter {
    - SoulMixView _soulMixView
    - SoulMixModel _soulMixModel
}

class SoulMixView {
    - InputUIButton _soulMixButton
    - Text _logText
    - Transform _cardContainer
    - GameObject _soulCardPrefab
}

class SoulMixModel {
    - SoulCombiner _soulCombiner
    - ReactiveCollection<SoulCardData> OwnedCards
    - ReactiveProperty<string> LogMessage
    - SoulCardManager _soulCardManager
}

class SoulCombiner {
    - SoulCardList ownedSelectSouls
    - List<SoulCombination> combinations
}

class SoulCardManager {
    - SoulCardList _soulCardListSo
    - SoulMixModel _soulMixModel
    - SaveAndLoadManager _saveAndLoadManager
}

SoulMixPresenter --> SoulMixView : has
SoulMixPresenter --> SoulMixModel : has
SoulMixModel --> SoulCombiner : uses
SoulCardManager --> SoulCardList : has
SoulCardManager --> SoulMixModel : uses

class SoulCardData {
    - int cardID
    - Sprite image
    - string soulName
    - int soulLevel
    - SoulAbility soulAbility
    - Status status
    - List<TraitWrapper> traitList
}

class SoulAbility {
    - string abilityName
    - float coolTime
    - SkillBase skillBase
    - string effectText
}

class Status {
    - int hp
    - int attack
    - int defence
    - float coolTime
    - float range
    - float bulletSpeed
    - float effectTime
    - int bulletNum
    - int penetration
    - float moveSpeed
    - float growthSpeed
    - int luck
}

interface ITraitInterface {
    void ExecuteTrait()
}

class TraitWrapper {
    - ITraitInterface _trait
}
class SoulCardList {
    - List<SoulCardData> _soulCardList
}

ITraitInterface <|.. TraitWrapper : implements
SoulCardData "0..*" --> "1" SoulAbility : has
SoulCardData "0..*" --> "1" Status : has
SoulCardData "0..*" --> "0..*" TraitWrapper : has

}

@enduml
